Update description in manifest.json for clarity and improved user understanding

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "OpenHighlighter",
   "version": "1.0.1",
-  "description": "OpenHighlighter is a source available extension that quickly highlights multiple search words on any webpage. Search and visually mark keywords, phrases, or patterns in real time.",
+  "description": "OpenHighlighter is a source available extension that quickly highlights multiple search words, keywords, or phrases on any webpage. Search and visually mark important terms in real time.",
   "action": {
     "default_popup": "popup.html"
   },
